--- a/app/src/main/res/layout/fragment_movie.xml
+++ b/app/src/main/res/layout/fragment_movie.xml
@@ -8,9 +8,11 @@
 
     <ProgressBar
         android:id="@+id/movieProgressBar"
-        style="?android:attr/progressBarStyle"
+        style="@android:style/Widget.ProgressBar.Inverse"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:elevation="10dp"
+        android:indeterminate="true"
         android:layout_centerInParent="true"
         android:visibility="gone" />
 
