beres model tv show detail retrofit

--- a/app/src/main/res/layout/activity_tv_show_detail.xml
+++ b/app/src/main/res/layout/activity_tv_show_detail.xml
@@ -1,9 +1,344 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".view.TvShowDetailActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ProgressBar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/tvDetailProgressBar"
+        style="@android:style/Widget.ProgressBar.Inverse"
+        android:gravity="center"
+        android:elevation="10dp"
+        android:indeterminate="true"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true" />
+
+    <ScrollView
+        android:id="@+id/tv_lyt_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/img_poster"
+                android:layout_width="160dp"
+                android:layout_height="240dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:contentDescription="@string/crew3_sample"
+                android:scaleType="fitXY"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/a_14_poster_iron_fist" />
+
+            <ImageView
+                android:id="@+id/img_cast1"
+                android:layout_width="110dp"
+                android:layout_height="165dp"
+                android:layout_marginStart="8dp"
+                android:contentDescription="@string/crew3_sample"
+                android:scaleType="fitXY"
+                app:layout_constraintEnd_toStartOf="@+id/img_cast2"
+                app:layout_constraintHorizontal_chainStyle="spread_inside"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/cast_guideline"
+                app:srcCompat="@drawable/amber_heard" />
+
+
+            <ImageView
+                android:id="@+id/img_cast2"
+                android:layout_width="110dp"
+                android:layout_height="165dp"
+                android:contentDescription="@string/crew3_sample"
+                android:scaleType="fitXY"
+                app:layout_constraintEnd_toStartOf="@+id/img_cast3"
+                app:layout_constraintStart_toEndOf="@+id/img_cast1"
+                app:layout_constraintTop_toBottomOf="@id/cast_guideline"
+                app:srcCompat="@drawable/bradley_cooper" />
+
+            <ImageView
+                android:id="@+id/img_cast3"
+                android:layout_width="110dp"
+                android:layout_height="165dp"
+                android:layout_marginEnd="8dp"
+                android:contentDescription="@string/crew3_sample"
+                android:scaleType="fitXY"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/img_cast2"
+                app:layout_constraintTop_toBottomOf="@id/cast_guideline"
+                app:srcCompat="@drawable/brendan_fraser" />
+
+            <TextView
+                android:id="@+id/txv_title"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                android:text="@string/poster_text_sample"
+                android:textSize="14sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/txv_title_desc"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/main_guideline"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/txv_title_desc"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:ellipsize="end"
+                android:maxLines="2"
+                android:text="@string/user_score"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/main_guideline"
+                app:layout_constraintTop_toBottomOf="@+id/txv_title" />
+
+            <TextView
+                android:id="@+id/txv_crew1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:text="@string/crew3_sample"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/main_guideline"
+                app:layout_constraintTop_toBottomOf="@+id/txv_title_desc" />
+
+            <TextView
+                android:id="@+id/txv_crew1_desc"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:ellipsize="end"
+                android:maxLines="2"
+                android:text="@string/crew3_desc_sample"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/main_guideline"
+                app:layout_constraintTop_toBottomOf="@+id/txv_crew1" />
+
+            <TextView
+                android:id="@+id/txv_crew2"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:text="@string/crew3_sample"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/main_guideline"
+                app:layout_constraintTop_toBottomOf="@+id/txv_crew1_desc" />
+
+            <TextView
+                android:id="@+id/txv_crew2_desc"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:ellipsize="end"
+                android:maxLines="2"
+                android:text="@string/crew2_desc_sample"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/main_guideline"
+                app:layout_constraintTop_toBottomOf="@+id/txv_crew2" />
+
+            <TextView
+                android:id="@+id/txv_crew3"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:text="@string/crew3_sample"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/main_guideline"
+                app:layout_constraintTop_toBottomOf="@+id/txv_crew2_desc" />
+
+            <TextView
+                android:id="@+id/txv_crew3_desc"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:ellipsize="end"
+                android:maxLines="2"
+                android:text="@string/crew3_desc_sample"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/main_guideline"
+                app:layout_constraintTop_toBottomOf="@+id/txv_crew3" />
+
+            <TextView
+                android:id="@+id/txv_cast1_desc"
+                android:layout_width="110dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:text="@string/cast_desc_sample"
+                android:textAlignment="center"
+                app:layout_constraintEnd_toStartOf="@+id/txv_cast2_desc"
+                app:layout_constraintHorizontal_chainStyle="spread_inside"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/img_cast1" />
+
+            <TextView
+                android:id="@+id/txv_cast2_desc"
+                android:layout_width="110dp"
+                android:layout_height="wrap_content"
+                android:text="@string/cast_desc_sample"
+                android:textAlignment="center"
+                app:layout_constraintEnd_toStartOf="@+id/txv_cast3_desc"
+                app:layout_constraintStart_toEndOf="@id/txv_cast1_desc"
+                app:layout_constraintTop_toBottomOf="@+id/img_cast2" />
+
+            <TextView
+                android:id="@+id/txv_cast3_desc"
+                android:layout_width="110dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:text="@string/cast_desc_sample"
+                android:textAlignment="center"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/txv_cast2_desc"
+                app:layout_constraintTop_toBottomOf="@+id/img_cast3" />
+
+            <androidx.constraintlayout.widget.Barrier
+                android:id="@+id/cast_desc_barrier"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:barrierDirection="bottom"
+                tools:layout_editor_absoluteY="456dp"
+                app:constraint_referenced_ids="txv_cast1_desc,txv_cast2_desc,txv_cast3_desc"/>
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/main_guideline"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_begin="180dp" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/cast_guideline"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_begin="255dp" />
+
+            <TextView
+                android:id="@+id/txv_overview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:text="@string/overview"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:layout_constraintTop_toBottomOf="@id/cast_desc_barrier"/>
+
+            <TextView
+                android:id="@+id/txv_overview_desc"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:text="Seasoned musician Jackson Maine discovers — and falls in love with — struggling artist Ally. She has just about given up on her dream to make it big as a singer — until Jack coaxes her into the spotlight. But even as Ally's career takes off, the personal side of their relationship is breaking down, as Jack fights an ongoing battle with his own internal demons."
+                android:textSize="12sp"
+                app:layout_constraintTop_toBottomOf="@id/txv_overview"/>
+
+            <TextView
+                android:id="@+id/txv_genre"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:text="@string/genre"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:layout_constraintTop_toBottomOf="@id/txv_overview_desc"/>
+
+            <TextView
+                android:id="@+id/txv_genre_desc"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:text="DRAMA, ROMANCE, MUSIC"
+                android:textSize="14sp"
+                app:layout_constraintTop_toBottomOf="@id/txv_genre"/>
+
+            <TextView
+                android:id="@+id/txv_review"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:text="@string/review"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:layout_constraintTop_toBottomOf="@id/txv_genre_desc"/>
+
+            <TextView
+                android:id="@+id/txv_review_written_by"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginBottom="8dp"
+                android:text="A review by Gimly / 4.0"
+                android:textColor="#1E0331"
+                android:textSize="12sp"
+                app:layout_constraintTop_toBottomOf="@id/txv_review"/>
+
+            <TextView
+                android:id="@+id/txv_review_written_on"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:text="Written by Gimly on February 19, 2019"
+                android:textSize="12sp"
+                app:layout_constraintTop_toBottomOf="@id/txv_review_written_by"/>
+
+            <TextView
+                android:id="@+id/txv_review_desc"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintTop_toBottomOf="@id/txv_review_written_on"
+                android:textAlignment="viewStart"
+                android:textSize="12sp"
+                tools:text="@tools:sample/lorem"/>
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </ScrollView>
+
+</RelativeLayout>
